# Boids

./: CMakeLists.txt
src/: main.cpp
